kubernetes-security/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30123
