kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "homework.otus"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/(index.html|homepage)"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conf-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "homework.otus"
      http:
        paths:
          - pathType: Prefix
            path: "/conf"
            # path: "/conf(/key|$)"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-metrics
#   namespace: homework
#   # annotations:
#   #   nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#     - host: "homework.otus"
#       http:
#         paths:
#           - pathType: Prefix
#             path: "/metrics"
#             backend:
#               service:
#                 name: nginx-service
#                 port:
#                   number: 80
